tests/files/lexer_tests/should_fail/069.cmdr
a = 'This is an unknown escape: \y ';